--- a/ruby/classwork/devisemailer/Gemfile
+++ b/ruby/classwork/devisemailer/Gemfile
@@ -21,8 +21,11 @@ gem "jbuilder"
 
 
 gem 'bootstrap-sass', '~> 3.4', '>= 3.4.1'
-
 gem 'jquery-rails'
+gem 'font-awesome-sass', '~> 6.5', '>= 6.5.2'
+gem 'bootstrap-sass-extras', '~> 0.1.0'
+gem 'devise', '~> 4.9', '>= 4.9.4'
+gem 'simple_form', '~> 5.3', '>= 5.3.1'
 
 # Use Kredis to get higher-level data types in Redis [https://github.com/rails/kredis]
 # gem "kredis"
@@ -53,6 +56,13 @@ end
 group :development do
   # Use console on exceptions pages [https://github.com/rails/web-console]
   gem "web-console"
+end
+
+group :production do
+  # Use console on exceptions pages [https://github.com/rails/web-console]
+  gem 'rails_12factor', '~> 0.0.3'
+  gem 'pg', '~> 1.5', '>= 1.5.9'
+
 end
 
 group :test do
