--- a/ruby/classwork/rorudemy/Gemfile
+++ b/ruby/classwork/rorudemy/Gemfile
@@ -21,8 +21,10 @@ gem "jbuilder"
 # gem "bcrypt", "~> 3.1.7"
 
 gem 'bootstrap-sass', '~> 3.4', '>= 3.4.1'
-gem 'sassc-rails', '>= 2.1.0'
+gem 'sass-rails', '>= 2.1.0'
 gem 'jquery-rails'
+
+gem 'font-awesome-sass', '~> 6.5', '>= 6.5.2'
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem "tzinfo-data", platforms: %i[ windows jruby ]
