--- a/ruby/classwork/rorudemy/Gemfile
+++ b/ruby/classwork/rorudemy/Gemfile
@@ -23,8 +23,11 @@ gem "jbuilder"
 gem 'bootstrap-sass', '~> 3.4', '>= 3.4.1'
 gem 'sass-rails', '>= 2.1.0'
 gem 'jquery-rails'
-
 gem 'font-awesome-sass', '~> 6.5', '>= 6.5.2'
+
+gem 'bootstrap-sass-extras', '~> 0.1.0'
+gem 'devise', '~> 4.9', '>= 4.9.4'
+gem 'simple_form', '~> 5.3', '>= 5.3.1'
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem "tzinfo-data", platforms: %i[ windows jruby ]
