--- a/ruby/classwork/rorudemy/Gemfile
+++ b/ruby/classwork/rorudemy/Gemfile
@@ -5,7 +5,7 @@ gem "rails", "~> 8.0.0"
 # The modern asset pipeline for Rails [https://github.com/rails/propshaft]
 gem "propshaft"
 # Use postgresql as the database for Active Record
-gem "pg", "~> 1.1"
+# gem "pg", "~> 1.1"
 # Use the Puma web server [https://github.com/puma/puma]
 gem "puma", ">= 5.0"
 # Use JavaScript with ESM import maps [https://github.com/rails/importmap-rails]
@@ -28,6 +28,9 @@ gem 'font-awesome-sass', '~> 6.5', '>= 6.5.2'
 gem 'bootstrap-sass-extras', '~> 0.1.0'
 gem 'devise', '~> 4.9', '>= 4.9.4'
 gem 'simple_form', '~> 5.3', '>= 5.3.1'
+
+gem 'rails_12factor', '~> 0.0.3'
+
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem "tzinfo-data", platforms: %i[ windows jruby ]
@@ -63,6 +66,10 @@ end
 group :development do
   # Use console on exceptions pages [https://github.com/rails/web-console]
   gem "web-console"
+end
+
+group :production do
+  gem 'pg', '~> 1.5', '>= 1.5.9'
 end
 
 group :test do
