--- a/ruby/classwork/rorudemy/Gemfile
+++ b/ruby/classwork/rorudemy/Gemfile
@@ -30,7 +30,8 @@ gem 'devise', '~> 4.9', '>= 4.9.4'
 gem 'simple_form', '~> 5.3', '>= 5.3.1'
 
 gem 'rails_12factor', '~> 0.0.3'
-
+gem 'will_paginate', '~> 4.0', '>= 4.0.1'
+gem 'will_paginate-bootstrap', '~> 1.0', '>= 1.0.2'
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem "tzinfo-data", platforms: %i[ windows jruby ]
