Added jQuery functionality, slideToggle Uses jQuery, Load More Comments - In Progress

--- a/ruby/classwork/blog/.gitignore
+++ b/ruby/classwork/blog/.gitignore
@@ -10,6 +10,9 @@
 # Ignore all environment files.
 /.env*
 
+# Ignore Node.js modules
+node_modules/
+
 # Ignore all logfiles and tempfiles.
 /log/*
 /tmp/*
