--- a/ruby/classwork/blog/Gemfile
+++ b/ruby/classwork/blog/Gemfile
@@ -30,6 +30,9 @@ gem "bootsnap", require: false
 
 gem 'stripe'
 
+# Load more
+gem 'requestjs-rails'
+
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
   gem "debug", platforms: %i[ mri windows ], require: "debug/prelude"
