--- a/ruby/classwork/blog/Gemfile
+++ b/ruby/classwork/blog/Gemfile
@@ -33,6 +33,9 @@ gem 'stripe'
 # Load more
 gem 'requestjs-rails'
 
+# Likes
+gem 'acts_as_votable'
+
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
   gem "debug", platforms: %i[ mri windows ], require: "debug/prelude"
