--- a/ruby/classwork/blog/Gemfile
+++ b/ruby/classwork/blog/Gemfile
@@ -30,11 +30,6 @@ gem "bootsnap", require: false
 
 gem 'stripe'
 
-# Load more
-gem 'requestjs-rails'
-
-# Likes
-gem 'acts_as_votable'
 
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
@@ -54,3 +49,9 @@ group :test do
   gem "selenium-webdriver"
 end
 gem "devise", "~> 4.9"
+
+gem "faker", "~> 3.5"
+
+gem "will_paginate", "~> 4.0"
+
+gem "will_paginate-bootstrap", "~> 1.0"
