--- a/ruby/classwork/blog/Gemfile
+++ b/ruby/classwork/blog/Gemfile
@@ -30,7 +30,6 @@ gem "bootsnap", require: false
 
 gem 'stripe'
 
-
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
   gem "debug", platforms: %i[ mri windows ], require: "debug/prelude"
@@ -50,8 +49,9 @@ group :test do
 end
 gem "devise", "~> 4.9"
 
+# Generate fake data
 gem "faker", "~> 3.5"
 
+# Load more 
 gem "will_paginate", "~> 4.0"
-
 gem "will_paginate-bootstrap", "~> 1.0"
